--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -63,19 +63,71 @@
         app:layout_constraintTop_toBottomOf="@id/edSobrenomeCadastro"
         tools:ignore="MissingConstraints" />
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edCEPCadastro"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/campoCep"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:hint="CEP"
-        android:inputType="text|number"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edCPFCadastro"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/edCPFCadastro">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edCEPCadastro"
+            android:layout_width="267dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:hint="CEP"
+            android:inputType="text|number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/btnConsultar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:text="Buscar"
+            android:textColor="@android:color/background_light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edCEPCadastro" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvEnderecoCadastro"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Endereço"
+        android:textAlignment="viewStart"
+        android:textSize="14dp"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/campoCep" />
+
+    <TextView
+        android:id="@+id/tvNascimentoCadastro"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Data de Nascimento"
+        android:textAlignment="viewStart"
+        android:textSize="18dp"
+        android:textColor="#959595"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEnderecoCadastro" />
 
     <Button
         android:id="@+id/btnCadastro"
@@ -89,7 +141,7 @@
         android:textColor="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edCEPCadastro" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNascimentoCadastro" />
 
 
 </android.support.constraint.ConstraintLayout>
