--- a/app/src/main/res/layout-land/activity_cadastro.xml
+++ b/app/src/main/res/layout-land/activity_cadastro.xml
@@ -43,7 +43,6 @@
             android:inputType="text|textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tituloCadastro"
             tools:ignore="MissingConstraints" />
 
         <android.support.design.widget.TextInputEditText
@@ -54,7 +53,6 @@
             android:inputType="text|textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edNomeCadastro"
             tools:ignore="MissingConstraints" />
 
     </LinearLayout>
@@ -81,7 +79,6 @@
             android:inputType="text|number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/campoNome"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -94,8 +91,7 @@
             android:textSize="18dp"
             android:textColor="#959595"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edCPFCadastro" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </LinearLayout>
 
@@ -113,7 +109,7 @@
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edCEPCadastro"
-            android:layout_width="478dp"
+            android:layout_width="465dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:hint="CEP"
@@ -124,14 +120,14 @@
 
         <Button
             android:id="@+id/btnConsultar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/cardview_light_background"
             android:text="Buscar"
-            android:textColor="@android:color/background_light"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edCEPCadastro" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </LinearLayout>
 
