--- a/app/src/main/res/layout-land/activity_configuracoes.xml
+++ b/app/src/main/res/layout-land/activity_configuracoes.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
         android:text="Edição de Dados"
         android:textSize="25dp"
         android:textStyle="bold"
@@ -21,48 +21,82 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edNomeEdicao"
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:id="@+id/campoNome"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:hint="Nome"
-        android:inputType="text|textPersonName"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tituloEdicao"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/tituloEdicao">
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edSobrenomeEdicao"
-        android:layout_width="match_parent"
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edNomeEdicao"
+            android:layout_width="282dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:hint="Nome"
+            android:inputType="text|textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tituloEdicao"
+            tools:ignore="MissingConstraints" />
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edSobrenomeEdicao"
+            android:layout_width="282dp"
+            android:layout_height="wrap_content"
+            android:hint="Sobrenome"
+            android:inputType="text|textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edNomeEdicao"
+            tools:ignore="MissingConstraints" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/campoCPFNasc"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:hint="Sobrenome"
-        android:inputType="text|textPersonName"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edNomeEdicao"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/campoNome">
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edCPFEdicao"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:hint="CPF"
-        android:inputType="text|number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edSobrenomeEdicao"
-        tools:ignore="MissingConstraints" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edCPFEdicao"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:hint="CPF"
+            android:inputType="text|number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints" />
 
+
+        <TextView
+            android:id="@+id/tvNascimentoEdicao"
+            android:layout_width="240dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="8dp"
+            android:text="Data de Nascimento"
+            android:textAlignment="viewStart"
+            android:textSize="18dp"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/campoCep"
@@ -74,11 +108,11 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edCPFEdicao">
+        app:layout_constraintTop_toBottomOf="@id/campoCPFNasc">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edCEPEdicao"
-            android:layout_width="220dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:hint="CEP"
@@ -100,20 +134,6 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvNascimentoEdicao"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:text="Data de Nascimento"
-        android:textAlignment="viewStart"
-        android:textSize="18dp"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/campoCep" />
 
     <Button
         android:id="@+id/btnEdicao"
@@ -127,6 +147,6 @@
         android:textColor="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNascimentoEdicao" />
+        app:layout_constraintTop_toBottomOf="@+id/campoCep" />
 
 </android.support.constraint.ConstraintLayout>
